--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,15 @@
     "require": {
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "6.0",
         "laravel/framework": "^8.54",
         "laravel/helpers": "^1.4",
         "laravel/homestead": "^12.6",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.3"
+        "laravel/ui": "^3.3",
+        "php-http/guzzle6-adapter": "1.1",
+        "sparkpost/sparkpost": "^2.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
