--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "php-http/guzzle6-adapter": "1.1",
-        "sparkpost/sparkpost": "^2.3"
+        "sparkpost/sparkpost": "^2.3",
+        "spatie/laravel-fractal": "^5.8"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
